[package]
name = "coco"
version = "1.0.3"
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
serde = { version = "1.0.129", features = ["derive"] }
structopt = "0.3.22"
dirs-next = "2.0.0"
anyhow = "1.0.43"
fancy-regex = "0.7.1"

[profile.release]
lto = "fat"