[package]
name = "coco"
version = "1.0.3"
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
dirs-next = "2.0.0"
anyhow = "1.0.44"
fancy-regex = "0.10.0"

[profile.release]
lto = "fat"